--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
       if (view === 'admin' && isAdmin) {
         return (
           <div className="min-h-screen bg-gradient-to-br from-blue-900 via-purple-900 to-blue-800 p-4">
-            <div className="max-w-6xl mx-auto bg-white rounded-lg shadow-2xl p-6">
+            <div className="max-w-full mx-auto bg-white rounded-lg shadow-2xl p-6">
               <div className="flex items-center justify-between mb-6">
                 <div className="flex items-center gap-3">
                   <Award />
