--- a/index.html
+++ b/index.html
@@ -237,11 +237,15 @@
           <div className="min-h-screen bg-gradient-to-br from-blue-900 via-purple-900 to-blue-800 p-4">
             <div className="max-w-3xl mx-auto bg-white rounded-lg shadow-2xl p-6">
               <div className="flex items-center justify-between mb-6">
-                <div className="flex items-center gap-3">
-                  <Trophy />
+                <div className="flex flex-col items-center w-full gap-4">
+                  <img 
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Vince_Lombardi_Trophy.svg/800px-Vince_Lombardi_Trophy.svg.png" 
+                    alt="Vince Lombardi Trophy" 
+                    className="h-24"
+                  />
                   <h1 className="text-3xl font-bold">Super Bowl Teaser</h1>
                 </div>
-                <div className="flex gap-2">
+                <div className="flex gap-2 justify-center mt-4">
                   <button onClick={() => setView('scores')} className="px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700">
                     View Scores
                   </button>
@@ -574,14 +578,20 @@
         return (
           <div className="min-h-screen bg-gradient-to-br from-blue-900 via-purple-900 to-blue-800 p-4">
             <div className="max-w-7xl mx-auto bg-white rounded-lg shadow-2xl p-6">
-              <div className="flex justify-between items-center mb-6">
-                <h1 className="text-3xl font-bold flex items-center gap-3">
-                  <Trophy />
-                  Live Scoreboard
-                </h1>
-                <button onClick={() => setView('entry')} className="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">
-                  Back to Entry
-                </button>
+              <div className="mb-6">
+                 <div className="flex flex-col items-center gap-4 mb-6">
+                  <img 
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Vince_Lombardi_Trophy.svg/800px-Vince_Lombardi_Trophy.svg.png" 
+                    alt="Vince Lombardi Trophy" 
+                    className="h-24"
+                  />
+                  <h1 className="text-3xl font-bold">Live Scoreboard</h1>
+                </div>
+                <div className="flex justify-center mt-4">
+                  <button onClick={() => setView('entry')} className="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">
+                    Back to Entry Form
+                  </button>
+                </div>
               </div>
               <div className="overflow-x-auto">
                 <table className="w-full text-xs">
