--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
               <div className="flex items-center justify-between mb-6">
                 <div className="flex flex-col items-center w-full gap-4">
                   <img 
-                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Vince_Lombardi_Trophy.svg/800px-Vince_Lombardi_Trophy.svg.png" 
+                    src="https://en.wikipedia.org/wiki/Super_Bowl#/media/File:Super_Bowl_logo.svg" 
                     alt="Vince Lombardi Trophy" 
                     className="h-24"
                   />
