--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Super Bowl Teaser</title>
+  <title>Dan's Super Bowl Teaser Pool</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
@@ -243,7 +243,7 @@
                     alt="Vince Lombardi Trophy" 
                     className="h-24"
                   />
-                  <h1 className="text-3xl font-bold">Super Bowl Teaser</h1>
+                  <h2 className="text-3xl font-bold">Dan's Super Bowl Teaser Pool</h2>
                 </div>
                 <div className="flex gap-2 justify-center mt-4">
                   <button onClick={() => setView('scores')} className="px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700">
