--- a/index.html
+++ b/index.html
@@ -782,8 +782,8 @@
                   </button>
                 </div>
               </div>
-              <div className="overflow-x-auto">
-                <table className="w-full text-xs">
+                <div className="overflow-x-auto overflow-y-visible">
+                  <table className="w-full text-xs relative">
                   <thead>
                     <tr className="bg-gray-100">
                       <th className="px-2 py-2 text-left sticky left-0 bg-gray-100 z-10">Rank</th>
