--- a/index.html
+++ b/index.html
@@ -793,9 +793,9 @@
                           <th key={i} className="px-1 py-2 text-center relative group cursor-help">
                             <div className="font-bold">{i + 1}</div>
                             <div className="text-xs text-gray-500">{calculatePercentages(i)}% Y</div>
-                            <div className="absolute bottom-full left-1/2 transform -translate-x-1/2 mb-2 hidden group-hover:block bg-gray-900 text-white text-xs rounded py-2 px-3 whitespace-nowrap z-50 shadow-lg">
-                              <div className="max-w-xs whitespace-normal">{q}</div>
-                              <div className="absolute top-full left-1/2 transform -translate-x-1/2 border-4 border-transparent border-t-gray-900"></div>
+                            <div className="absolute top-full left-1/2 transform -translate-x-1/2 mt-2 hidden group-hover:block bg-gray-900 text-white text-xs rounded py-2 px-3 z-50 shadow-lg min-w-max max-w-xs">
+                              <div className="whitespace-normal">{q}</div>
+                              <div className="absolute bottom-full left-1/2 transform -translate-x-1/2 border-4 border-transparent border-b-gray-900"></div>
                             </div>
                           </th>
                         ))}
