--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -793,14 +792,16 @@
                           <th key={i} className="px-1 py-2 text-center relative group cursor-help">
                             <div className="font-bold">{i + 1}</div>
                             <div className="text-xs text-gray-500">{calculatePercentages(i)}% Y</div>
-                            <div className="absolute top-full left-1/2 transform -translate-x-1/2 mt-2 hidden group-hover:block bg-gray-900 text-white text-xs rounded py-2 px-3 z-50 shadow-lg min-w-max max-w-xs">
+                            <div className={`absolute top-full mt-2 hidden group-hover:block bg-gray-900 text-white text-xs rounded py-2 px-3 z-50 shadow-lg min-w-max max-w-xs ${
+      i >= 17 ? 'right-0' : 'left-1/2 transform -translate-x-1/2'
+    }`}>
                               <div className="whitespace-normal">{q}</div>
-                              <div className="absolute bottom-full left-1/2 transform -translate-x-1/2 border-4 border-transparent border-b-gray-900"></div>
+                              <div className={`absolute bottom-full border-4 border-transparent border-b-gray-900 ${
+        i >= 17 ? 'right-3' : 'left-1/2 transform -translate-x-1/2'
+      }`}></div>
                             </div>
                           </th>
                         ))}
-
-
                       <th className="px-2 py-2 text-center">TB</th>
                     </tr>
                   </thead>
