--- a/index.html
+++ b/index.html
@@ -831,8 +831,11 @@
                         {entry.answers.map((ans, i) => (
                           <td
                             key={i}
-                            className={`px-1 py-2 text-center font-bold ${correctAnswers[i] !== undefined && correctAnswers[i] === ans
-                                ? 'bg-green-400 text-white'
+                            className={`px-1 py-2 text-center font-bold ${
+                              correctAnswers[i] !== undefined
+                                ? correctAnswers[i] === ans
+                                  ? 'bg-green-400 text-white'
+                                  : 'bg-red-200'
                                 : ''
                               }`}
                           >
