--- a/index.html
+++ b/index.html
@@ -666,7 +666,14 @@
                     )}
                   </div>
                   <div className="flex items-center justify-between mb-4">
-                    <h2 className="text-xl font-bold">Enter Correct Answers</h2>
+                    <div>
+                      <h2 className="text-xl font-bold">Enter Correct Answers</h2>
+                      <p className="text-sm text-gray-600 mt-1">
+                        <span className="font-semibold text-green-600">{Object.keys(correctAnswers).length} answered</span>
+                        {' • '}
+                        <span className="font-semibold text-orange-600">{20 - Object.keys(correctAnswers).length} remaining</span>
+                      </p>
+                    </div>
                     <div className="flex gap-2">
                       <button
                         onClick={exportCorrectAnswers}
@@ -684,8 +691,17 @@
                   </div>
                   <div className="space-y-3 mb-8">
                     {questions.map((q, i) => (
-                      <div key={i} className="bg-gray-50 p-4 rounded-lg">
-                        <p className="mb-3"><strong>{i + 1}.</strong> {q}</p>
+                      <div key={i} className={`p-4 rounded-lg border-2 ${
+                        correctAnswers[i] !== undefined 
+                          ? 'bg-green-50 border-green-300' 
+                          : 'bg-orange-50 border-orange-300'
+                      }`}>
+                        <p className="mb-3">
+                          <strong>{i + 1}.</strong> {q}
+                          {correctAnswers[i] !== undefined && (
+                            <span className="ml-2 text-green-600 font-bold">✓</span>
+                          )}
+                        </p>
                         <div className="flex gap-4">
                           <label className="flex items-center cursor-pointer">
                             <input
