more bug fixing

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
           '<meta charset="UTF-8">' +
           '<meta name="viewport" content="width=device-width, initial-scale=1.0">' +
           '<title>Super Bowl Pool Results - ' + year + '</title>' +
-          '<script src="https://cdn.tailwindcss.com"></script>' +
+          '<script src="https://cdn.tailwindcss.com"></scr' + 'ipt>' +
           '</head><body>' +
           '<div class="min-h-screen bg-gradient-to-br from-blue-900 via-purple-900 to-blue-800 p-4">' +
           '<div class="max-w-7xl mx-auto bg-white rounded-lg shadow-2xl p-6">' +
