shortened export file name

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
         const link = document.createElement('a');
         const url = URL.createObjectURL(blob);
         link.setAttribute('href', url);
-        link.setAttribute('download', 'superbowl-results-' + year + '.html');
+        link.setAttribute('download', 'results-' + year + '.html');
         link.style.visibility = 'hidden';
         document.body.appendChild(link);
         link.click();
